# Text-Data-Bench

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MODEL_USAGE.md  Makefile  README.md  check_gpu_and_llm.py  dump_configs.md  dump_root.md  dump_src.md  dump_tests.md  error.txt  force-install.ps1  force-reinstall.ps1  install.ps1  log.txt  pyproject.toml  run.bat  test_llm.py  utf-8.txt
.github/workflows/: ci.yaml
configs/: default.yaml  parsers.yaml  pipeline.yaml
output/: arrow.arrow.md  arrow.parquet  iris.csv  iris.csv.md  iris.feather.md  iris.h5.md  iris.parquet  iris.parquet.md  iris.tsv  iris.tsv.md  iris.xlsx.md  report.md
src/text_data_bench/: __init__.py  __main__.py  cli.py
src/text_data_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/text_data_bench/config/: base.py  loader.py
src/text_data_bench/core/: __init__.py  device.py  pipeline.py  registry.py
src/text_data_bench/engines/: base.py  core.py  graph.py  numpy.py  specialized.py  tabular.py  textual.py
src/text_data_bench/io/: loaders.py  reporters.py
src/text_data_bench/llm/: __init__.py  engine.py  parser.py
src/text_data_bench/processors/: balancer.py  benchmark.py  dedup.py  filters.py
src/text_data_bench/utils/: __init__.py  cache.py  logger.py  magic_detector.py
tests/: conftest.py  generate_fixtures.py  test_pipeline.py  test_units.py
tests/fixtures/: csv.csv  excel.xlsx  feather.feather  hdf5.h5  json.json  jsonl.jsonl  md.md  parquet.parquet  pickle.pkl  tsv.tsv  xml.xml
tests/fixtures/hf.hf/: data-00000-of-00001.arrow  state.json  (+1 more)
