[project]
name = "text-data-bench"
version = "1.0.0"
description = "Data-centric pipeline with 14 explicit format engines"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.39.3",
    "pydantic>=2.13.2",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "datasketch>=1.10.0",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "openpyxl>=3.1.5",
    "h5py>=3.16.0",
    "datasets>=4.8.4",
    "xlsxwriter>=3.2.9",
    "pytest>=9.0.3"
]

[project.optional-dependencies]
cpu = []
gpu = []

[project.scripts]
databench = "text_data_bench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = ["slow: marks tests as slow"]
